# JKU_ParallelComputing_Labs

./: .gitignore  CMakeLists.txt  PC_assignment1.cpp  PC_assignment1.h  README.md  benchmarking.cpp  benchmarking.h  gauss_methods.cpp  gauss_methods.h  globals.cpp  globals.h  logger.cpp  matrix.cpp  matrix.h  matrix_solid.cpp  matrix_solid.h  minimatrix.cpp  minimatrix.h  parallel_gauss_methods_advanced.cpp  parallel_gauss_methods_advanced.h  parallel_gauss_methods_basic.cpp  support_methods.h
Assignment1/: CMakeLists.txt  PC_assignment1.cpp  README.md  globals.cpp  globals.h  logger.cpp  matrix.h  minimatrix.h  parallel_gauss_methods_basic.cpp  parallel_gauss_methods_basic.h
Assignment2/: CMakeLists.txt  main.c
Assignment2/ubuntu22_main/: atomic.c  bogus.c  bogus_default_with_analysis.c  incorrect.c  local.c  local_atomic.c  local_incorrect.c  local_locked.c  locked.c  progress.c
Assignment4/: PrimeCheck2.cpp  main.cpp
pc3/: CMakeLists.txt  benchmarking.cpp  benchmarking.h  flatmatrix.cpp  flatmatrix.h  gauss_methods.cpp  gauss_methods_flat.cpp  gauss_seq_usage.cpp  globals.cpp  globals.h  logger.cpp  main.cpp  matrix.cpp  matrix.h  parallel_gauss_methods_basic.cpp  parallel_gauss_methods_basic.h  support_methods.h
